# autosnap

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: embedded-cache.bin.zstd  generator.rs  lib.rs  main.rs  snap.rs
src/generator/: go.rs  gradle.rs  python.rs  rust.rs
