[package]
name = "autosnap"
version = "0.4.0"
authors = ["Aloïs Micard <alois@micard.lu>"]
edition = "2018"
description = "Automatically make Snap package from github repository"
license = "GPL-3.0"
repository = "https://github.com/creekorful/autosnap"

[dependencies]
clap = "2.33.3"
git2 = "0.13.9"
url = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
log = "0.4.11"
simple_logger = "1.6.0"
cargo-lock = "4.0.1"
cargo_toml = "0.8.1"
askalono = "0.4.2"
